syntax = "proto3";

option java_multiple_files = true;
option java_outer_classname = "Paciofs";
option java_package = "de.zib.paciofs.grpc";

package paciofs.grpc;

import "messages/ping.proto";
import "messages/volume.proto";

message CreateVolumeRequest {
  messages.Volume volume = 1;
}

message CreateVolumeResponse {
  messages.Volume volume = 1;
}

message PingRequest {
  messages.Ping ping = 1;
}

message PingResponse {
  messages.Ping ping = 1;
}

service PacioFsService {
  rpc CreateVolume(CreateVolumeRequest) returns (CreateVolumeResponse);
  rpc Ping(PingRequest) returns (PingResponse);
}
